# licitabrasil

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/commands/: auditar-folha.md  impugnacao.md  medicao.md  novo-scraper.md  recon.md  status.md  sync.md  vencimento.md
.github/workflows/: tests.yml
app/: Dockerfile  config.py  database.py  main.py  middleware.py  requirements.txt
app/auth/: deps.py
app/lib/: sentry.py
app/migrations/: env.py
app/models/: audit_log.py  licitacao.py
app/routes/: admin.py  auth.py  dashboard.py  licitacoes.py
app/schemas/: auth.py  licitacao.py
app/scripts/: create_admin.py  purge_encerradas.py  test_purge.py
app/templates/: base.html  forgot_password.html  licitacao_detail.html  licitacoes.html  reset_password.html
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/prisma/: normalize-emails.ts  schema.prisma  seed.ts
backend/scripts/: run-all-scrapers.ts
caddy/: Caddyfile
docs/: monitoramento-argus.md
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
scrapers/: __init__.py  cbtu_govbr.py  cbtu_govbr_test.py  jfpe_licitacoes.py  jfpe_licitacoes_test.py
scripts/: backup.sh  cleanup.py  com.argus.licitabrasil.plist  download_pe_90007.sh  ingest.py  run_cbtu_bg.sh  run_cbtu_scrape.py  setup-argus.sh  smoke_apis.py  wait_cbtu.sh
(+307 files in other folders)
