[project]
name = "licitabrasil"
version = "0.2.0"
description = "LicitaBrasil — Plataforma de Inteligência em Licitações Públicas"
requires-python = ">=3.11"
dependencies = [
    # --- FastAPI stack (app/) ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "httpx>=0.27",
    "resend>=2.0",
    "redis>=5.0",
    "structlog>=24.0",
    "openpyxl>=3.1",
    # --- Intelligence modules (src/licitabrasil/) ---
    "typer>=0.12",
    "rich>=13.0",
    "pdfplumber>=0.11",
    "docxtpl>=0.18",
    "scikit-learn>=1.5",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
licitabrasil = "licitabrasil.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app", "src/licitabrasil"]
omit = ["app/scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "app"]
